fix: button font and spacing

--- a/src/options/body.scss
+++ b/src/options/body.scss
@@ -5,7 +5,7 @@ body {
 
 	margin: 0;
 	height: 410px;
-	width: 600px;
+	width: 620px;
 	max-width: 100%;
 	max-height: 100%;
 	font-size: 16px;
